--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   api:
     build: .
@@ -8,6 +7,25 @@ services:
     volumes:
       - ./models:/app/models
       - ./logs:/app/logs
-    environment:
-      - ENVIRONMENT=production
+    networks:
+      - passos_network
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
     restart: unless-stopped
+
+  streamlit:
+    build: .
+    container_name: passos_magicos_streamlit
+    ports:
+      - "8501:8501"
+    environment:
+      - API_URL=http://api:8000
+    depends_on:
+      - api
+    networks:
+      - passos_network
+    command: streamlit run streamlit_app.py --server.port=8501 --server.address=0.0.0.0
+    restart: unless-stopped
+
+networks:
+  passos_network:
+    driver: bridge
